--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -34,7 +34,7 @@
             android:layout_marginTop="5dp"
             android:background="@drawable/xml_bg_edittext"
             android:hint="Username / Email"
-            android:inputType="textCapWords" />
+            android:inputType="text" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -53,7 +53,7 @@
             android:inputType="textPassword" />
 
         <Button
-            android:id="@+id/btn_register"
+            android:id="@+id/btn_login"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
