--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -42,7 +42,7 @@
             android:textSize="24sp" />
 
         <TextView
-            android:id="@+id/lbl_icnumber"
+            android:id="@+id/lbl_age"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="IC Number" />
