--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16sp"
+    android:background="@drawable/bglogin3"
     tools:context=".RegisterActivity">
 
     <LinearLayout
@@ -19,7 +20,16 @@
             android:layout_width="wrap_content"
             android:layout_height="227dp"
             android:layout_gravity="center_horizontal"
-            android:src="@drawable/mycv_logo" />
+            android:src="@drawable/logotodo" />
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/audiowide"
+            android:text="Login"
+            android:textAlignment="center"
+            android:textSize="48sp" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -33,6 +43,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:background="@drawable/xml_bg_edittext"
+            android:drawableEnd="@android:drawable/ic_dialog_email"
             android:hint="Username / Email"
             android:inputType="text" />
 
@@ -49,6 +60,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:background="@drawable/xml_bg_edittext"
+            android:drawableEnd="@android:drawable/ic_lock_idle_lock"
             android:hint="Password"
             android:inputType="textPassword" />
 
@@ -57,7 +69,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
-            android:background="@color/colorAccent"
+            android:backgroundTint="@color/btn_login_facebook"
             android:text="Login" />
 
     </LinearLayout>
