--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16sp"
+    android:background="@drawable/bglogin3"
     tools:context=".RegisterActivity">
 
     <LinearLayout
@@ -13,6 +14,22 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="match_parent"
+            android:layout_height="227dp"
+            android:layout_gravity="center_horizontal"
+            android:src="@drawable/logotodo" />
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/audiowide"
+            android:text="Register"
+            android:textAlignment="center"
+            android:textSize="48sp" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -65,22 +82,6 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:text="Password:"
-            android:textSize="12sp" />
-
-        <EditText
-            android:id="@+id/et_password"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:background="@drawable/xml_bg_edittext"
-            android:hint="Password"
-            android:inputType="textPassword" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="Re-type Password:"
             android:textSize="12sp" />
 
         <EditText
